# git-narrator

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: test.yml
docs/: tasks.md
src/: commands.rs  config.rs  emotes.rs  git.rs  llm.rs  main.rs  ui.rs
