[package]
name = "git-narrator"
version = "0.2.0"
edition = "2021"
description = "AI-powered commit message generation CLI tool"
authors = ["Michal Lipinki <michal.lipinski@gmail.com>"]
repository = "https://github.com/mi4uu/git-ai-narrator"
homepage = "https://github.com/mi4uu/git-ai-narrator"
readme = "README.md"
license = "MIT"
keywords = ["ai", "llm", "git", "commit", "cli"]
categories = ["command-line-utilities"]


[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
anyhow = "1.0"
toml = "0.8"
colored = "3.0.0"
uuid = { version = "1.7", features = ["v4"] }
prettytable-rs = "0.10"
dirs = "6.0.0"
reqwest = { version = "0.12.15", features = ["json"] }
tempfile = "3.19.1"
color-eyre = "0.6.4"

[dev-dependencies]
wiremock = "0.6.3"

[profile.release]
lto = true
strip = true
opt-level = "z"
